--- a/index.ipynb
+++ b/index.ipynb
@@ -190,12 +190,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "\"art vandelay\". # 'Art Vandelay'"
+    "\"art vandelay\".title() # 'Art Vandelay'"
    ]
   },
   {
