--- a/index.ipynb
+++ b/index.ipynb
@@ -243,23 +243,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'str' object has no attribute 'endwith'",
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-11-9382afa25180>, line 1)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31m\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-9-e1795dcb2465>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;34m\"art.vandelay@vandelay.co\"\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mendwith\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcom\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# False\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m: 'str' object has no attribute 'endwith'"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-11-9382afa25180>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    \"art.vandelay@vandelay.co\".endswith(.com) # False\u001b[0m\n\u001b[0m                                        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
    "source": [
-    "\"art.vandelay@vandelay.co\".endswith(com) # False"
+    "\"art.vandelay@vandelay.co\".endswith(.com) # False"
    ]
   },
   {
